Fix select box alignment and grid padding

--- a/app/styles/_form.less
+++ b/app/styles/_form.less
@@ -12,6 +12,9 @@
 				width: 25%;
 				margin: 0.8em 0;
 				color: #928886;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+				overflow: hidden;
 			}
 
 			> div {
@@ -22,10 +25,6 @@
 			& + div {
 				margin-top: 10px;
 			}
-		}
-
-		.field-date .col-sm-10 {
-			line-height: 46px;
 		}
 	}
 
@@ -87,6 +86,10 @@
 				right: 0;
 			}
 		}
+	}
+
+	select {
+		margin: 0.8em 0;
 	}
 }
 
