--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -322,14 +322,14 @@ header {
 
 // homemade grid system
 [class*="col-"] {
-    padding: 0 2em;
+    padding: 0 20px;
     float: left;
     .clearfix();
 }
 
 .row,
 .form-group {
-    margin: 0 -2em;
+    margin: 0 -20px;
     .clearfix();
 }
 
